--- a/personal.html
+++ b/personal.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Family Page</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="favicon.ico">
-	<link rel="stylesheet" href="html5reset.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="icon" href="imgs/favicon.ico">
+	<link rel="stylesheet" href="css/html5reset.css">
+	<link rel="stylesheet" href="css/style.css">
 	
 </head>
 <body>
@@ -27,12 +27,14 @@
 	
 	
 	<main>
-		<h1>Family Page</h1>
+		<h1>Family</h1>
 	<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<p>
-		<img src = "wisconsin_dells.jpg" alt="wisconsin dells" width="25"/>
-		<img src = "badlands.jpg" alt="badlands" width="1000"/>
-		<img src = "falling.jpg" alt="Falling" width="25"/>
-		<img src = "jewel_cave.JPG" alt="jewel cave" width="1000"/>
+	
+		<img src="/imgs/wisconsin_dells.jpg" alt="wisconsin dells" width="25"/>
+		<img src="/imgs/badlands.jpg" alt="badlands" width="1000"/>
+		<img src="/imgs/falling.jpg" alt="Falling" width="25"/>
+		<img src="/imgs/jewel_cave.JPG" alt="jewel cave" width="1000"/>
+	
 	</main>
 	Colleen van Lent &copy; 2020
 </body>
