--- a/personal.html
+++ b/personal.html
@@ -12,28 +12,25 @@
 <body>
 	<header>
 	  <nav>
-			<a href="./index.html">About Me</a>
-	        <a href="./personal.html">Family</a>
-	        <a href="./random.html">Random</a>
-	        <a href="https://www.si.umich.edu/" target="_blank">UMSI</a>
-
-			<!--<li><a href = "#About Me">About Me</a></li>
-			<li><a href = "#Family">Family</a></li>
-			<li><a href = "#Random">Random</a></li>
-			<li><a href = "#UMSI">UMSI</a></li> -->
+		<ul>
+			<li><a href = "index.html">About Me</a></li>
+			<li><a href = "personal.html">Family</a></li>
+			<li><a href = "random.html">Random</a></li>
+			<li><a href = "http://www.si.umich.edu">UMSI</a></li>
+		</ul>
 	   </nav>
+	   <h1>Family</h1>
 	</header>
 
 	
 	
 	<main>
-		<h1>Family</h1>
 	<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<p>
 	
-		<img src="/imgs/wisconsin_dells.jpg" alt="wisconsin dells" width="25"/>
-		<img src="/imgs/badlands.jpg" alt="badlands" width="1000"/>
-		<img src="/imgs/falling.jpg" alt="Falling" width="25"/>
-		<img src="/imgs/jewel_cave.JPG" alt="jewel cave" width="1000"/>
+		<img src="imgs/wisconsin_dells.jpg" alt="wisconsin dells" width="25"/>
+		<img src="imgs/badlands.jpg" alt="badlands" width="1000"/>
+		<img src="imgs/falling.jpg" alt="Falling" width="25"/>
+		<img src="imgs/jewel_cave.JPG" alt="jewel cave" width="1000"/>
 	
 	</main>
 	Colleen van Lent &copy; 2020
